--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,23 @@ beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+fiona==1.9.6
+geographiclib==2.0
+geopandas==0.14.3
+geopy==2.4.1
 h11==0.14.0
 idna==3.6
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
+joblib==1.3.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 matplotlib-inline==0.1.6
@@ -30,17 +38,22 @@ psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+pyproj==3.6.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==25.1.2
 requests==2.31.0
+scikit-learn==1.4.1.post1
+scipy==1.13.0
 selenium==4.19.0
+shapely==2.0.3
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.3
+threadpoolctl==3.4.0
 tornado==6.4
 traitlets==5.14.2
 trio==0.25.0
