--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.4
 asttokens==2.4.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
+branca==0.7.2
 bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -13,6 +14,7 @@ debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
 fiona==1.9.6
+folium==0.16.0
 geographiclib==2.0
 geopandas==0.14.3
 geopy==2.4.1
@@ -21,12 +23,15 @@ idna==3.6
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
+Jinja2==3.1.4
 joblib==1.3.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 nest-asyncio==1.6.0
 numpy==1.26.4
+openrouteservice==2.3.3
 outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.1
@@ -63,3 +68,4 @@ tzdata==2024.1
 urllib3==2.2.1
 wcwidth==0.2.13
 wsproto==1.2.0
+xyzservices==2024.4.0
